save scanned book to sqlite

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-barcode-scanner": "~6.0.0",
     "expo-constants": "6.0.0",
     "expo-font": "~6.0.0",
+    "expo-sqlite": "~6.0.0",
     "expo-web-browser": "6.0.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
