--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@expo/samples": "~3.0.3",
-    "@expo/vector-icons": "^10.0.3",
+    "@expo/vector-icons": "^10.0.5",
+    "@material-ui/core": "^4.4.3",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "expo": "^34.0.1",
     "expo-asset": "^6.0.0",
@@ -25,6 +26,7 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-elements": "^1.2.3",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-paper": "2.4.0",
     "react-native-web": "^0.11.4",
