--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.5",
     "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "expo": "^34.0.1",
     "expo-asset": "^6.0.0",
